[package]
name = "remitano-api"
version = "0.1.0"
authors = ["Thien Le <thien@botbie.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.61"
derive_builder = "0.11.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.13.0"
serde_qs = "0.10"
hyperx = "1.4.0"
